# genro-print

./: CLAUDE.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  getting_started.md  index.rst
docs/analysis/: architecture.md  index.rst  layout_row_cell_theory.md  legacy_problems.md  reportlab_builder.md
docs/api/: builders.rst  computed.rst  index.rst  print_app.rst
examples/enhanced/basic/: styled_elements.py
examples/enhanced/components/: labeled_text_demo.py
examples/enhanced/styledblocks/: nested_styles.py
examples/lrc/basic/nested_elastic/: nested_elastic.py
examples/lrc/basic/simple_layout/: simple_layout.py
examples/lrc/with_elements/: with_elements.py
examples/reportlab/basic/hello_world/: hello_world.py
examples/reportlab/basic/images_and_shapes/: images_and_shapes.py
examples/reportlab/basic/invoice/: invoice.py
examples/reportlab/basic/multi_page/: multi_page.py
examples/reportlab/basic/multi_paragraph/: multi_paragraph.py
examples/reportlab/basic/simple_table/: simple_table.py
examples/reportlab/basic/styled_table/: styled_table.py
examples/reportlab/charts/bar_chart/: bar_chart.py
examples/reportlab/charts/line_chart/: line_chart.py
examples/reportlab/charts/pie_chart/: pie_chart.py
examples/reportlab/charts/qrcode/: qrcode_demo.py
examples/reportlab/platypus/flowables/: flowables.py
examples/reportlab/platypus/long_document/: long_document.py
examples/reportlab/platypus/with_images/: with_images.py
src/genro_print/: __init__.py  enhanced_print_app.py  lrc_app.py  print_app.py
src/genro_print/builders/: __init__.py  lrc.py  lrc_builder.py  print_builder.py  print_lrc_builder.py  print_styled_builder.py  reportlab.py  reportlab_builder.py  reportlab_enhanced_builder.py
src/genro_print/builders/mixins/: __init__.py  canvas_mixin.py  charts_mixin.py  document_mixin.py  lrc_mixin.py  platypus_mixin.py  styled_mixin.py
src/genro_print/compilers/: __init__.py  lrc_print_compiler.py  lrc_resolver.py  print_compiler.py  reportlab_backend.py  styled_print_compiler.py
src/genro_print/components/: __init__.py  lrc_components.py  styled_components.py
src/genro_print/computed/: __init__.py  layout.py
src/genro_print/renderers/: __init__.py  lrc_reportlab.py
src/genro_print/utils/: __init__.py  coordinates.py  pdf_utils.py
tests/: test_init.py
